# kobza-resolver

./: LICENSE  README.md  filter_5lw.py  kobza-solver.html  kobza_filtered_dict_words.txt  kobza_solver.py  pyproject.toml
