[tool.poetry]
name = "kobza-resolver"
version = "0.1.0"
description = "Utilities for resolving Kobza game"
authors = ["Serge <serge.sotnyk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
